# rust-rest-serverless

./: .gitignore  Cargo.toml  Makefile  README.md  template.yaml
src/: lib.rs
tests/: aws_test.rs
